final-second-secton

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga reprehenderit velit aperiam tempora sunt
                 esse, inventore vero labore? Exercitationem neque numquam amet molestiae est illum, facere asperiores
                 quis laborum, doloremque voluptatum culpa, tempore natus molestias.</p>
+            <a class="button contactb" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">concact Me</a>
         </div>
     </section>
 </body>
