--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
             <a class="button contactb" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">concact Me</a>
         </div>
     </section>
+
+
+    <section class="recipy">
+        <div class="recipy-head-box">
+            <h2>my recipies</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatum minima eligendi at quia.
+                Repudiandae fugit possimus, saepe quaerat tempora voluptatibus tenetur.</p>
+        </div>
+        <div class="racipy-box">
+            <div class="recipy-item">
+                <img width="550px" src="images/food/Project Cover.jpg" alt="food picture">
+                <h3>recipy title</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, facilis architecto dolor impedit
+                    ex, veritatis ipsum modi quo, culpa aperiam provident? Eum, in.</p>
+            </div>
+            <div class="recipy-item"> <img width="550px" src="images/food/Project Cover.png" alt="food picture">
+                <h3>recipy title</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, facilis architecto dolor impedit
+                    ex, veritatis ipsum modi quo, culpa aperiam provident? Eum, in.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
 </body>
 
 </html>
