--- a/index.html
+++ b/index.html
@@ -58,7 +58,24 @@
         </div>
     </section>
 
+    <section class="follower">
+        <div class="main-boxF">
+            <div class="follower-box">
+                <h1>700k</h1>
+                <span>Instagram followe</span>
+            </div>
+            <div class="follower-box">
+                <h1>700k</h1>
+                <span>youtube subscriber</span>
+            </div>
+            <div class="follower-box">
+                <h1>700k</h1>
+                <span>web visitor</span>
+            </div>
+        </div>
 
+
+    </section>
 
 
 
