--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
 
 
     </section>
-
-
-
-
-
-
 </body>
+<footer>
+    <h3><span class="footer-er-ftani">eat</span> fresh </h3>
+    <p> eat healhy to live healthy to live happy</p>
+    <span>© ys yasin arafat | practicing period 2023</span>
+</footer>
 
 </html>
