--- a/index.html
+++ b/index.html
@@ -7,20 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/male/Hero Image.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <title>Eat-Fresh</title>
 </head>
 
 <body>
-    <section class="flex-sec">
-        <div class="headSecText">
-            <h1><span>skip</span> the dieat, just eat healthy with food network</h1>
-            <p>imagine you don't need a diet becous you provide helthy and delacius food for you</p>
-            <a class="button" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">order food</a>
-        </div>
-        <div class="headSecImg">
-            <img width="700px" src="images/male/Hero_Image-removebg-preview.png" alt="Heros">
-        </div>
-    </section>
+    <header class="">
+        <nav class="navi">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">survice</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">about us</a></li>
+            </ul>
+        </nav>
+        <section class="flex-sec">
+            <div class="headSecText">
+                <h1><span>skip</span> the dieat, just eat healthy with food network</h1>
+                <p>imagine you don't need a diet becous you provide helthy and delacius food for you</p>
+                <a class="button" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">order food</a>
+            </div>
+            <div class="headSecImg">
+                <img width="700px" src="images/male/Hero_Image-removebg-preview.png" alt="Heros">
+            </div>
+        </section>
+    </header>
 
 
     <section class="flex-sec aboutme-bg">
